--- a/happy_shop/templates/happy_shop/base.html
+++ b/happy_shop/templates/happy_shop/base.html
@@ -33,7 +33,7 @@
                 <template #start>
                     {% block start %}
                     <b-navbar-item href="{% url 'happy_shop:index' %}">
-                        首页
+                        Home
                     </b-navbar-item>
                     <b-navbar-item href="{% url 'happy_shop:all_category' %}" 
                         {% if 'all_category' in request.path_info %}active{% endif %}>
@@ -42,7 +42,7 @@
                             icon="format-list-text"
                             size="is-small">
                         </b-icon>
-                        <span>全部分类</span>
+                        <span>All</span>
                     </b-navbar-item>
                     {% for nav in navs %}
                     <b-navbar-dropdown label="{{ nav.name }}">
@@ -169,8 +169,8 @@
                       <span class="icon is-large has-text-white mr-1" style="font-size: 3em;"> 
                         <i class="mdi mdi-basket-plus"></i></span>
                       <div class="has-text-success-light">
-                        <p class="heading is-size-6">轻松购物</p>
-                        <p class="title has-text-success-light is-size-5">品种齐全</p>
+                        <p class="heading is-size-6">Easy shopping</p>
+                        <p class="title has-text-success-light is-size-5">Complete variety</p>
                       </div>
                     </div>
                     <div class="level-item">
@@ -182,8 +182,8 @@
                             <!-- <i class="mdi mdi-rv-truck"></i> -->
                         </span>
                         <div class="has-text-success-light">
-                          <p class="heading is-size-6">多仓直发</p>
-                          <p class="title has-text-success-light is-size-5">极速配送</p>
+                          <p class="heading is-size-6">Efficient</p>
+                          <p class="title has-text-success-light is-size-5">Fast delivery</p>
                         </div>
                     </div>
                     <div class="level-item">
@@ -193,21 +193,21 @@
                         <span class="icon is-large has-text-white mr-1" style="font-size: 3em;"> 
                             <i class="mdi mdi-ballot"></i></span>
                         <div class="has-text-success-light">
-                          <p class="heading is-size-6">精致服务</p>
-                          <p class="title has-text-success-light is-size-5">正品行货</p>
+                          <p class="heading is-size-6">Exquisite service</p>
+                          <p class="title has-text-success-light is-size-5">Authentic goods</p>
                         </div>
                     </div>
-                    <div class="level-item">
+                    <!-- <div class="level-item">
                         <p class="has-text-centered has-text-success-light">|</p>
-                    </div>
-                    <div class="level-item ">
+                    </div> -->
+                    <!-- <div class="level-item ">
                         <span class="icon is-large has-text-white mr-1" style="font-size: 3em;"> 
                             <i class="mdi mdi-wallet-giftcard"></i></span>
                         <div class="has-text-success-light">
                           <p class="heading is-size-6">畅选无忧</p>
                           <p class="title has-text-success-light is-size-5">天天低价</p>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="level-item">
                         <p class="has-text-centered has-text-success-light">|</p>
                     </div>
@@ -215,8 +215,8 @@
                         <span class="icon is-large has-text-white mr-1" style="font-size: 3em;"> 
                             <i class="mdi mdi-hand-heart"></i></span>
                         <div class="has-text-success-light">
-                          <p class="heading is-size-6">极速退换</p>
-                          <p class="title has-text-success-light is-size-5">无忧售后</p>
+                          <p class="heading is-size-6">Fast response</p>
+                          <p class="title has-text-success-light is-size-5">Worry free after-sales</p>
                         </div>
                     </div>
                 </nav>
@@ -224,7 +224,6 @@
                 <div class="content has-text-centered has-text-white">
                     <p>Copyright 2022 by <strong class="has-text-white">bomaisp</strong>
                         . All rights reserved.</p>
-                    <p class="is-size-6">本程序由<a class="has-text-white-ter" href="https://www.djangoproject.com/">Django</a>强力驱动</p>
                 </div>
             </div>
         </footer>
