--- a/happy_shop/templates/happy_shop/goods.html
+++ b/happy_shop/templates/happy_shop/goods.html
@@ -4,7 +4,7 @@
 {% block end_div %}{% endblock %}
 {% block breadcrumb_content %}
 <b-breadcrumb align="is-left">
-    <b-breadcrumb-item tag='a' href="{% url 'happy_shop:index' %}" >首页</b-breadcrumb-item>
+    <b-breadcrumb-item tag='a' href="{% url 'happy_shop:index' %}" >Home</b-breadcrumb-item>
     {% if category.parent %}
     <b-breadcrumb-item tag='a'>{{ category.parent.name }}</b-breadcrumb-item>
     {% endif %}
@@ -21,7 +21,7 @@
 </style>
 <section class="section" id="Goods">
     <div class="container">
-        <div class="box">
+        <!-- <div class="box">
             <form method="get" id="goodsForm">
                 {% with form=goods.form %}
                     {% for field in form.visible_fields %}
@@ -33,7 +33,7 @@
                 {% endwith %}
                 <input type="submit" class="button is-primary is-small" value="筛选" />
             </form>
-        </div>
+        </div> -->
         <div class="columns is-multiline">
             {% for sku in page_obj %}
             <div class="column is-3">
@@ -47,8 +47,8 @@
                         {{ sku.spu.title }} {{ sku.get_options }}
                     </h2>
                     <div class="mt-2 foot">
-                        <div class="is-pulled-left is-size-7 has-text-grey-light">{{ sku.sales }}人付款</div>
-                        <div class="is-pulled-right is-size-7 has-text-grey-light">5.0分</div>
+                        <div class="is-pulled-left is-size-7 has-text-grey-light">Purchaser: {{ sku.sales }}</div>
+                        <div class="is-pulled-right is-size-7 has-text-grey-light">5.0</div>
                         <div class="is-clearfix"></div>
                     </div>
                 </a>
